@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6bc58bc1f0a6bbe7d9d4259b0b44e620f1f84521 ChangeLog
+SHA1 b5ea8d4faa7e75e527311a61dfce451e7e3cdb44 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 003a1689432ca91c9d4d77556b871826b573fa57 MANIFEST
-SHA1 7cf794203bfdbc4d0db75dff570f1bb75c602e17 META.yml
-SHA1 b3a051a37ae21975c17c2f60315293e815dcd0d4 Makefile.PL
+SHA1 a0a25ac822fffc5417cf2c703eb3961acced5136 META.yml
+SHA1 ae0a5c8af86031f9f7a392a8b8f2365d4c48696c Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 55ad5345eebcf4f13ea67debf3995c15930e2e5b bin/fullauto.pl
@@ -34,7 +34,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 02d7d6fa31436569dec60b6dda11d4411f06f80f lib/Net/FullAuto.pm
+SHA1 f77f55605802a99e130f5963b83091e50fce1d42 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,7 +48,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk4Z2t8ACgkQdsVAdUjO9Ik0MwCfcftjK5r5EE2LLNBUwFebGlqS
-bH0AnRrBH84V+ZSxrlzzcXbdA4C8gwnK
-=3RXA
+iEYEARECAAYFAk4jlNgACgkQdsVAdUjO9ImtbACdHR7u2Z4iQg8AWD2wKQb0YwoP
+fM4AoKeFX8lB0VtgZ1VBjd1w/1tXLZTn
+=+n8D
 -----END PGP SIGNATURE-----
